--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Chatboyt",
-  "short_name": "Chatboyt",
+  "name": "Q.O.T.D",
+  "short_name": "Q.O.T.D",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
